--- a/src/home.html
+++ b/src/home.html
@@ -12,9 +12,10 @@
     <ul>
       <li>
         해당 url을 GET으로 요청하세요:
-        <code>http://127.0.0.1:8787/visit?page=$url</code>
+        <code>https://runningwater.workers.dev/visit?page=$url</code>
       </li>
-      <li>$url 부분을 당신의 웹사이트 url로 바꾸면 됩니다.</li>
     </ul>
+    <h4>Live Demo</h4>
+    <img src="visit?page=https://runningwater.workers.dev" />
   </body>
 </html>
